# Nuxleus.Extf

./: Extf.Net.sln  README  Web.config  Xameleon.ClickOnce.csproj  Xameleon.ClickOnce.pfx  Xameleon.Personal.Web.Communication.Platform.appref-ms  Xameleon.build  Xameleon.csproj  Xameleon.sln  XameleonPersonalWebCommunicationPlatform.wxs  appsite.py  appstore.conf  cherrypyserver.py  cpappsite.py  default.omx  index.xml  ipy.bat  start.cphttpserver.bat  start.xspserver.bat  start.xspserver.sh  xameleon.webapp
APP/: Collection.cs  IMember.cs  IStorage.cs  Member.cs  Service.cs  Storage.cs  Store.cs  Workspace.cs
AmpleeConsole/: Program.cs
Base/: Agent.cs  AppDataSet.Designer.cs  AppDataSet.xsd  AppDataSet.xss  Extf.Net.Base.csproj  Extf.Net.csproj  app.config
Configuration/: Configuration.cs
Dependencies/: AmazonAWS.S3.xml  Mvp.Xml.xml  saxon8api.netmodule
GlobalClip/: GlobalClip.cs  GlobalClip.csproj  GlobalClip_ACL.cs  GlobalClip_Cache.cs  GlobalClip_ClipData.cs  GlobalClip_ClipItem.cs  GlobalClip_Clipboard.cs  GlobalClip_Copy.cs  GlobalClip_Credentials.cs  GlobalClip_Init.cs  GlobalClip_Paste.cs  GlobalClip_Provider.cs  GlobalClip_SessionVariables.cs  Init.cs  app.config
VendorExtensions/S3/s3fs/: Makefile.am  Makefile.in  aclocal.m4  configure  done  go  s3.py  s3cmd.py
VendorExtensions/S3/s3fs/autom4te.cache/: output.0  requests  traces.0
VendorExtensions/S3/s3fs/example/: Makefile.in  hello.c
VendorExtensions/S3/s3fs/include/: Makefile.in  config.h.in
VendorExtensions/S3/s3fs/lib/: Makefile.in
VendorExtensions/S3/s3fs/util/: Makefile.in
(+495 files in other folders)
